--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
 name = "fast-fibonacci"
 version = "0.1.0"
+license = "GPL-3.0-or-later"
 authors = ["Dan <danmedani@gmail.com>"]
 edition = "2018"
+description = "Quickly find nth fibonacci number with modulo."
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+repository = "https://github.com/danmedani/fast-fibonacci"
+keywords = ["fibonacci", "linear recurrence", "fast"]
+readme = "README.md"
+
+categories = ["algorithms"]
 
 [dependencies]
 ndarray = "0.13.1"
